<resources>
    <string name="app_name">Study Planner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_task">Sample Task</string>
    <string name="sample_date">30/05/2018</string>
    <string name="sample_time">14:55</string>
    <string name="sample_start_date">30/05/2018</string>
    <string name="target_tracker">Target Tracker</string>
    <string name="sample_email">UserEmail@gmail.com</string>
    <string name="completed_task">Completed</string>
    <string name="current_tasks">Current</string>
    <string name="incomplete_tasks">Incomplete</string>
    <string name="enter_finish_date_string">Enter Finish Date</string>
    <string name="enter_finish_time_string">Enter finish Time</string>
    <string name="enter_topic_name_string">Enter Topic Name</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title_activity_add_target">AddTargetActivity</string>
    <string name="String_menu_progress">Progress</string>
    <string name="delete">Delete</string>
    <string name="reset">RESET</string>
    <string name="string_mark_as_complete">Mark As</string>
    <string name="title_activity_view_graph">ViewGraphActivity</string>
    <string name="string_menu_reset">Reset</string>
    <string name="string_reset_warning">Resetting will delete all data including the current todo list</string>
    <string name="string_reset_proceed">Proceed?</string>
    <string name="string_message_empty_list">There are no records to be displayed at the moment</string>
    <string name="string_message_direction">Get started by clicking on the add button</string>
    <string name="string_about">About</string>
    <string name="string_save">SAVE</string>
    <string name="string_planner_intro">A simple way to plan and track your studies. Just add topics and get started and we will remind you how much you have to study.</string>
    <string name="string_planner_step_1">1.Start by adding a topic by clicking on the + icon at he  bottom right of your screen
    </string>
    <string name="string_planner_step_2">2. View the topics to complete in the current tasks lists.</string>
    <string name="string_planner_step_3">3.Receive a reminder 15 minutes prior to deadline..</string>
    <string name="string_simple_to_use">Its simple to use</string>
    <string name="string_guide_1">Add a topic</string>
    <string name="string_guide_2">Receive reminder 15 minutes before deadline</string>
    <string name="string_guide_3">Swipe right an item to mark as complete, swipe left to delete</string>
    <string name="string_guide_4">View all your records in an organised fashion, track your progress via graphical representation</string>
    <string name="string_guide_5">and be true to yourself, we are not judging ;-)</string>
    <string name="string_complete">Complete</string>
</resources>
