<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itCurrentTask"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/current_tasks" />
        <item
            android:id="@+id/itCompletedTask"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/completed_task" />
        <item
            android:id="@+id/itIncompleteTask"
            android:icon="@drawable/baseline_assignment_late_24"
            android:title="@string/incomplete_tasks" />
        <item
            android:id="@+id/itSettings"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/String_menu_progress" />

    </group>


</menu>
