<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etTopicName"
                android:hint="@string/enter_topic_name_string"
                android:background="#00000000"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etFinishDate"
                android:layout_below="@+id/etTopicName"
                android:hint="@string/enter_finish_date_string"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etFinishTime"
                android:hint="@string/enter_finish_time_string"
                android:layout_below="@+id/etFinishDate"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:id="@+id/btSubmit"
                android:layout_below="@+id/etFinishTime"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>