<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            android:id="@+id/cvPlanIntro">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:text="@string/string_planner_intro"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryLight"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            android:id="@+id/cvPlanGuide"
            android:layout_below="@+id/cvPlanIntro"
            android:layout_marginTop="8dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:text="@string/string_simple_to_use"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryLight"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            android:id="@+id/cvPlanStep1"
            android:layout_below="@+id/cvPlanGuide"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:text="@string/string_guide_1"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryLight"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            android:id="@+id/cvPlanStep2"
            android:layout_below="@+id/cvPlanStep1"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:text="@string/string_guide_2"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryLight"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            android:id="@+id/cvPlanStep3"
            android:layout_below="@+id/cvPlanStep2"
           >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:text="@string/string_guide_3"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryLight"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            android:id="@+id/cvPlanStep4"
            android:layout_below="@+id/cvPlanStep3"
          >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:text="@string/string_guide_4"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryLight"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            android:id="@+id/cvPlanStep5"
            android:layout_below="@+id/cvPlanStep4"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:text="@string/string_guide_5"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryLight"/>
        </android.support.v7.widget.CardView>




    </RelativeLayout>

</android.support.constraint.ConstraintLayout>