<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvTaskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_task"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFinishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTaskName"
                android:text="@string/sample_date"
                android:layout_marginTop="8dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvFinishTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTaskName"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/tvFinishDate"
                android:text="@string/sample_time"
                android:textSize="16sp" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/ivDelete"
                android:layout_toStartOf="@+id/ivCompleted"
                android:src="@drawable/ic_delete_black_24dp"
                android:layout_below="@+id/tvTaskName"
                android:layout_marginEnd="8dp"/>

            <ImageView
                android:id="@+id/ivCompleted"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_done_black_24dp"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>